--- a/mini_game_animation/gift-animation-run-around/styles.css
+++ b/mini_game_animation/gift-animation-run-around/styles.css
@@ -6,13 +6,11 @@
     --button-bg-color: #3498db;
     --button-bg-hover: #2980b9;
     --button-text-color: #fff;
-    --button-border-radius: 15px;
+    --button-border-radius: 10px;
     --button-padding: 15px 30px;
     --button-font-size: 18px;
     --button-shadow-color: rgba(0, 0, 0, 0.2);
     --button-shadow-hover-color: rgba(0, 0, 0, 0.3);
-
-
 }
 
 body {}
@@ -37,7 +35,21 @@ body {}
     width: var(--giftBoxSize);
     height: var(--giftBoxSize);
     background-color: #7CB9E8;
-    transition: opacity 0.5s ease;
+
+    transition: opacity 0.2s ease;
+    transition: background-color 0.01s;
+}
+
+@keyframes changeColor {
+    0% {
+        background-color: #ff5733; /* Start color */
+    }
+    50% {
+        background-color: #33ff57; /* Middle color */
+    }
+    100% {
+        background-color: #3357ff; /* End color */
+    }
 }
 
 #giftBoxes .gift-box--hide {
@@ -130,23 +142,28 @@ body {}
     -webkit-animation: box-body 1s forwards ease-in-out;
     animation: box-body 1s forwards ease-in-out;
 }
+
 .box-body:hover .img {
     opacity: 1;
     z-index: 0;
     transform: translateY(-157px);
 }
+
 .box-body:hover .box-lid {
     -webkit-animation: box-lid 1s forwards ease-in-out;
     animation: box-lid 1s forwards ease-in-out;
 }
+
 .box-body:hover .box-bowtie::before {
     -webkit-animation: box-bowtie-left 1.1s forwards ease-in-out;
     animation: box-bowtie-left 1.1s forwards ease-in-out;
 }
+
 .box-body:hover .box-bowtie::after {
     -webkit-animation: box-bowtie-right 1.1s forwards ease-in-out;
     animation: box-bowtie-right 1.1s forwards ease-in-out;
 }
+
 .box-body::after {
     content: "";
     position: absolute;
@@ -221,19 +238,23 @@ body {}
     -webkit-animation: box-body 1s forwards ease-in-out;
     animation: box-body 1s forwards ease-in-out;
 }
+
 .box-body.hover .img {
     opacity: 1;
     z-index: 0;
     transform: translateY(-157px);
 }
+
 .box-body.hover .box-lid {
     -webkit-animation: box-lid 1s forwards ease-in-out;
     animation: box-lid 1s forwards ease-in-out;
 }
+
 .box-body.hover .box-bowtie::before {
     -webkit-animation: box-bowtie-left 1.1s forwards ease-in-out;
     animation: box-bowtie-left 1.1s forwards ease-in-out;
 }
+
 .box-body.hover .box-bowtie::after {
     -webkit-animation: box-bowtie-right 1.1s forwards ease-in-out;
     animation: box-bowtie-right 1.1s forwards ease-in-out;
@@ -399,28 +420,40 @@ body {}
 
 /* styles.css */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1000;
+    /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
-    justify-content: center; /* Center modal content */
-    align-items: center; /* Center modal content */
-    animation: fadeIn 0.4s; /* Fade in animation */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Black w/ opacity */
+    justify-content: center;
+    /* Center modal content */
+    align-items: center;
+    /* Center modal content */
+    animation: fadeIn 0.4s;
+    /* Fade in animation */
 }
 
 .modal-content {
-    animation: scaleUp 0.1s ease forwards; /* Scale up animation */
+    animation: scaleUp 0.1s ease forwards;
+    /* Scale up animation */
 }
 
 @keyframes fadeIn {
     from {
         opacity: 0.8;
     }
+
     to {
         opacity: 1;
     }
@@ -428,10 +461,13 @@ body {}
 
 @keyframes scaleUp {
     from {
-        transform: scale(0.2); /* Start small */
+        transform: scale(0.2);
+        /* Start small */
     }
+
     to {
-        transform: scale(1); /* Scale to full size */
+        transform: scale(1);
+        /* Scale to full size */
     }
 }
 
