--- a/docs/gift-v2/styles.css
+++ b/docs/gift-v2/styles.css
@@ -1,4 +1,5 @@
 :root {
+    --giftBoxSize_1336x768: 130px;
     --giftBoxSize: 173px;
     --giftBoxActiveSize: 230px;
     --gift-box: rgb(124, 185, 232);
@@ -20,6 +21,16 @@ body {
     margin: 0;
 }
 
+#volum {
+    position: absolute;
+    left: 20px;
+    top: 10px;
+    cursor: pointer;
+    color: white;
+    width: 100px;
+    height: 100px;
+}
+
 .centered {
     display: flex;
     margin: 0 auto;
@@ -32,6 +43,7 @@ body {
     /* min-height: 1080px; */
     max-height: 1080px;
     position: relative;
+    height: 100vh;
 }
 
 .game-container {
@@ -40,35 +52,38 @@ body {
     display: inline-grid;
 }
 
-#giftBoxes {
+.giftBoxes {
     opacity: 0;
     transition: opacity 0.5s ease;
 }
 
-#giftBoxes .line {
+.giftBoxes .line {
     display: flex;
     gap: var(--box-gap);
     margin-bottom: var(--box-gap);
 }
 
-#giftBoxes .gift-box {
+.giftBoxes .gift-box {
     border-radius: 35px;
-    width: var(--giftBoxSize);
-    height: var(--giftBoxSize);
+    width: var(--giftBoxSize_1336x768);
+    height: var(--giftBoxSize_1336x768);
     background-image: url('assets/images/gift-frame.png');
     background-size: 100% 100%;
     transition: opacity 0.2s ease, background-color 0.01s;
     position: relative;
-
 }
 
-#giftBoxes .box-wrapper.active {
+
+
+/* // TODO */
+
+.giftBoxes .box-wrapper.active {
     box-shadow: 0px 0px 100px 0px rgb(255 208 0 / 100%);
 
     border: solid 8px rgb(255 239 141 / 80%);
 }
 
-#giftBoxes .box-wrapper.active .gift-box{
+.giftBoxes .box-wrapper.active .gift-box {
     box-shadow: 0px 0px 50px 0px rgb(255 208 0 / 100%);
 }
 
@@ -92,7 +107,7 @@ body {
     z-index: 1;
 } */
 
-#giftBoxes .gift-box--hide {
+.giftBoxes .gift-box--hide {
     opacity: 0;
     pointer-events: none;
 }
@@ -179,6 +194,10 @@ body {
     border-bottom-right-radius: 5%;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
     background: linear-gradient(#762c2c, #ff0303);
+
+
+    /* hide animation open gift */
+    height: 0px;
 }
 
 .box-body .img {
@@ -186,6 +205,12 @@ body {
     transition: all 0.5s;
     margin: 0 auto;
     display: block;
+}
+
+.box-body .box-lid {
+    /* hide animation open gift */
+    display: none !important;
+
 }
 
 .box-body:hover {
@@ -201,6 +226,7 @@ body {
 }
 
 .box-body:hover .box-lid {
+
     -webkit-animation: box-lid 1s forwards ease-in-out;
     animation: box-lid 1s forwards ease-in-out;
 }
@@ -586,7 +612,7 @@ body {
 }
 
 
-#giftBoxes .box::before {
+.giftBoxes .box::before {
     content: '';
     position: absolute;
     background-size: inherit;
@@ -599,5 +625,47 @@ body {
     height: 120px;
 }
 
-.gift-box-container .box::before {
+.gift-box-container .box::before {}
+
+.d-none {
+    display: none;
+}
+
+.d-block {
+    display: block;
+}
+
+
+@media screen and (max-width: 1336px) {
+    .giftBoxes.w1920x1080 {
+        display: none;
+    }
+
+    .giftBoxes.w1366x768 {
+        opacity: 1;
+    }
+
+    .box-wrapper {
+        padding: 4px;
+        border-radius: 45px;
+    }
+
+    .giftBoxes .box::before {
+        width: 90px;
+        height: 90px;
+    }
+}
+
+@media screen and (min-width: 1337px) {
+    .giftBoxes.w1920x1080 {}
+
+    .giftBoxes.w1366x768 {
+        display: none;
+
+    }
+
+    .giftBoxes .gift-box {
+        width: var(--giftBoxSize);
+        height: var(--giftBoxSize);
+    }
 }
