--- a/docs/gift-v2/styles.css
+++ b/docs/gift-v2/styles.css
@@ -161,7 +161,7 @@ body {
 
 .gift-box-container {
     margin: auto;
-    width: 200px;
+    /* width: 200px; */
     z-index: 2;
 }
 
@@ -522,6 +522,8 @@ body {
 }
 
 .modal-content {
+    position: absolute;
+    top: 25%;
     animation: scaleUp 0.1s ease forwards;
     /* Scale up animation */
 }
@@ -635,8 +637,7 @@ body {
     display: block;
 }
 
-
-@media screen and (max-width: 1336px) {
+@media screen and (max-width: 1366px) {
     .giftBoxes.w1920x1080 {
         display: none;
     }
@@ -656,7 +657,7 @@ body {
     }
 }
 
-@media screen and (min-width: 1337px) {
+@media screen and (min-width: 1367px) {
     .giftBoxes.w1920x1080 {}
 
     .giftBoxes.w1366x768 {
